/*
 * $Id: ChangeLog,v 1.5305 2007/01/18 11:23:07 enricomaria Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2006-01-18 08:40 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * xharbour/contrib/rdd_ads/adsfunc.c
    ! added missing ADSDDREMOVEINDEXFILE() function

2007-01-18 12:15 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/rtl/alert.prg
    * Removed -1 as unused initialization value in the definition of variable iwnd
      in function HB_FUNC_STATIC( CT_WOPEN )

2007-01-17 09:20 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tget.prg
    ! fixed setpicture() method to allow change picture on the fly.

2007-01-16 11:12 UTC+0100 Miguel Angel Marchuet <miguelangel/at/marchuet.net>
  * xharbour/source/rdd/bmdbfcdx/bmdbfcdx1.c
    *   modified to admit DBOI_KEYDELETE and DBOI_KEYADD ignoring the FOR clause,
        that does not have meaning in customer index in order to add or del KEYS. 

2007-01-12 21:33 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbpp.h
  * utils/hbpp/hbpp.c
  * source/compiler/cmdcheck.c
  * source/compiler/harbour.c
    * Added bPseuudooFunc 3rd argument to hb_pp_AddDefine()

  * include/hberrors.h
    + Added: HB_PP_WARN_OVERLOADED_REDEF

  * source/pp/ppcore.c
    + Added support for overloading pseudo functions using #define

  /*
     This allows similiar functionality to #[x]translate or #[x]command
     for case sensitive pseudo functions. Example:

        #define int            3 // CTYPE_INT
        #define int(x)    Int(x) // Fixes conflict with Int() function

     Note that the overloaded pseudo function must be defined AFTER
     the overloaded plain #define or it will never match.

     WARNING: This modification may result in incompatable compilation
              of some very rare code, like:
